// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreateInitialEinsatz > Snapshots > sollte einen Snapshot im Loading-Zustand erstellen 1`] = `
<div>
  <div
    class="flex items-center justify-center min-h-screen p-4"
  >
    <div
      class="ant-card ant-card-bordered w-full max-w-md shadow-lg css-dev-only-do-not-override-1vjf2v5"
    >
      <div
        class="ant-card-head"
        style="text-align: center; font-size: 1.5rem;"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Initialen Einsatz erstellen
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-with-description mb-4 css-dev-only-do-not-override-1vjf2v5"
          data-show="true"
          role="alert"
        >
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
              />
            </svg>
          </span>
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Dev-Modus
            </div>
            <div
              class="ant-alert-description"
            >
              Dieser Schritt ist nur im Development-Modus sichtbar
            </div>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical ant-form-large css-dev-only-do-not-override-1vjf2v5"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required"
                  for="name"
                  title="Einsatz Name"
                >
                  Einsatz Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                      id="name"
                      maxlength="100"
                      placeholder="z.B. Brandeinsatz Hauptstraße"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class=""
                  for="beschreibung"
                  title="Beschreibung (optional)"
                >
                  Beschreibung (optional)
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-affix-wrapper-lg ant-input-textarea-show-count css-dev-only-do-not-override-1vjf2v5 ant-input-show-count ant-input-outlined"
                      data-count="0 / 500"
                    >
                      <textarea
                        class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5"
                        id="beschreibung"
                        maxlength="500"
                        placeholder="Zusätzliche Details zum Einsatz..."
                        rows="3"
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          class="ant-input-data-count"
                        >
                          0 / 500
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item mb-0 css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-loading w-full"
                      type="submit"
                    >
                      <span
                        class="ant-btn-icon ant-btn-loading-icon"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span>
                        Wird erstellt...
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateInitialEinsatz > Snapshots > sollte einen Snapshot im Standard-Zustand erstellen 1`] = `
<div>
  <div
    class="flex items-center justify-center min-h-screen p-4"
  >
    <div
      class="ant-card ant-card-bordered w-full max-w-md shadow-lg css-dev-only-do-not-override-1vjf2v5"
    >
      <div
        class="ant-card-head"
        style="text-align: center; font-size: 1.5rem;"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Initialen Einsatz erstellen
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-with-description mb-4 css-dev-only-do-not-override-1vjf2v5"
          data-show="true"
          role="alert"
        >
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
              />
            </svg>
          </span>
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Dev-Modus
            </div>
            <div
              class="ant-alert-description"
            >
              Dieser Schritt ist nur im Development-Modus sichtbar
            </div>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical ant-form-large css-dev-only-do-not-override-1vjf2v5"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required"
                  for="name"
                  title="Einsatz Name"
                >
                  Einsatz Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                      id="name"
                      maxlength="100"
                      placeholder="z.B. Brandeinsatz Hauptstraße"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class=""
                  for="beschreibung"
                  title="Beschreibung (optional)"
                >
                  Beschreibung (optional)
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-affix-wrapper-lg ant-input-textarea-show-count css-dev-only-do-not-override-1vjf2v5 ant-input-show-count ant-input-outlined"
                      data-count="0 / 500"
                    >
                      <textarea
                        class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5"
                        id="beschreibung"
                        maxlength="500"
                        placeholder="Zusätzliche Details zum Einsatz..."
                        rows="3"
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          class="ant-input-data-count"
                        >
                          0 / 500
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item mb-0 css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg w-full"
                      type="submit"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 256 256"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"
                          />
                        </svg>
                      </span>
                      <span>
                        Einsatz erstellen
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateInitialEinsatz > Snapshots > sollte einen Snapshot mit Fehlermeldung erstellen 1`] = `
<div>
  <div
    class="flex items-center justify-center min-h-screen p-4"
  >
    <div
      class="ant-card ant-card-bordered w-full max-w-md shadow-lg css-dev-only-do-not-override-1vjf2v5"
    >
      <div
        class="ant-card-head"
        style="text-align: center; font-size: 1.5rem;"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Initialen Einsatz erstellen
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-with-description mb-4 css-dev-only-do-not-override-1vjf2v5"
          data-show="true"
          role="alert"
        >
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
              />
            </svg>
          </span>
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Dev-Modus
            </div>
            <div
              class="ant-alert-description"
            >
              Dieser Schritt ist nur im Development-Modus sichtbar
            </div>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical ant-form-large css-dev-only-do-not-override-1vjf2v5"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class="ant-form-item-required"
                  for="name"
                  title="Einsatz Name"
                >
                  Einsatz Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5 ant-input-outlined"
                      id="name"
                      maxlength="100"
                      placeholder="z.B. Brandeinsatz Hauptstraße"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
              >
                <label
                  class=""
                  for="beschreibung"
                  title="Beschreibung (optional)"
                >
                  Beschreibung (optional)
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-affix-wrapper-lg ant-input-textarea-show-count css-dev-only-do-not-override-1vjf2v5 ant-input-show-count ant-input-outlined"
                      data-count="0 / 500"
                    >
                      <textarea
                        class="ant-input ant-input-lg css-dev-only-do-not-override-1vjf2v5"
                        id="beschreibung"
                        maxlength="500"
                        placeholder="Zusätzliche Details zum Einsatz..."
                        rows="3"
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          class="ant-input-data-count"
                        >
                          0 / 500
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item mb-0 css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg w-full"
                      type="submit"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 256 256"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"
                          />
                        </svg>
                      </span>
                      <span>
                        Einsatz erstellen
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
